@@ -1,3 +1,8 @@
+Mon Sep 08 17:39:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>
+
+	* gtkgame.c (GTKMessage): add a scrollbar for message window when
+	  it has to hold lots
+
 Mon Sep  8 19:20:13 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* import.c (ParseOldMove): handle oldmoves files generated by
